modules/networking/ig.tf

resource "aws_internet_gateway" "this" {
  vpc_id = aws_vpc.this.id
  tags = {
    Name        = "${var.module_name}-igw"
    Environment = var.environment
  }
}
