modules/networking/vpc.tf

resource "aws_vpc" "this" {
  cidr_block           = var.cidr
  enable_dns_hostnames = true
  enable_dns_support   = true
  tags = {
    Name        = "${var.module_name}-vpc"
    Environment = var.environment
  }
}
